# FractalGenerator

./: .gitignore  Makefile  README.md  pyproject.toml  runner.c  runnerCUDA.cu  runnerInt.c  testArray.cu
