[tool.poetry]
name = "fractalgenerator"
version = "0.1.0"
description = ""
authors = ["Wojciech Zacherek <zacherw@rose-hulman.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
